--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-description = 'fill project description'
+description = 'Auto services'
 
 apply plugin: 'java'
 // groovy is required for Spock
@@ -6,6 +6,7 @@ apply plugin: 'groovy'
 
 apply from: 'gradle/code-coverage.gradle'
 apply from: 'gradle/code-quality.gradle'
+apply from: 'gradle/application.gradle'
 
 sourceCompatibility = targetCompatibility = 1.8
 
@@ -15,6 +16,9 @@ sourceSets {
     main {
         java {
             srcDir 'src/java'
+        }
+        resources {
+            srcDir 'src/resources'
         }
     }
     test {
@@ -34,6 +38,12 @@ repositories {
 }
 
 dependencies {
+    compile "com.fasterxml.jackson.core:jackson-annotations:2.5.1"
+    // required dropwizard modules
+    ['core', 'views', 'assets'].each { module ->
+        compile "io.dropwizard:dropwizard-$module:0.8.4"
+    }
+
     testCompile "org.codehaus.groovy:groovy-all:${groovyMajorVersion}.${groovyMinorVersion}"
     testCompile "org.spockframework:spock-core:1.0-groovy-${groovyMajorVersion}"
 }
