--- a/auto.yaml
+++ b/auto.yaml
@@ -1,3 +1,8 @@
+database:
+  driverClass: org.h2.Driver
+  user: sa
+  password:
+  url: jdbc:h2:file:target/demo
 server:
   rootPath: /auto/*
   applicationConnectors:
@@ -12,3 +17,5 @@ metrics:
     - type: console
       timeZone: UTC
       output: stdout
+logging:
+  level: DEBUG
