--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,15 @@
 description = 'Auto services'
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.h2database:h2:1.3.170'
+        classpath 'org.flywaydb:flyway-gradle-plugin:3.2.1'
+    }
+}
+
 apply plugin: 'java'
 // groovy is required for Spock
 apply plugin: 'groovy'
@@ -7,6 +17,7 @@ apply plugin: 'groovy'
 apply from: 'gradle/code-coverage.gradle'
 apply from: 'gradle/code-quality.gradle'
 apply from: 'gradle/application.gradle'
+apply from: 'gradle/flywaydb.gradle'
 
 sourceCompatibility = targetCompatibility = 1.8
 
@@ -40,9 +51,10 @@ repositories {
 dependencies {
     compile "com.fasterxml.jackson.core:jackson-annotations:2.5.1"
     // required dropwizard modules
-    ['core', 'views', 'assets'].each { module ->
+    ['core', 'views', 'assets', 'jdbi'].each { module ->
         compile "io.dropwizard:dropwizard-$module:0.8.4"
     }
+    compile 'com.h2database:h2:1.3.170'
 
     testCompile "org.codehaus.groovy:groovy-all:${groovyMajorVersion}.${groovyMinorVersion}"
     testCompile "org.spockframework:spock-core:1.0-groovy-${groovyMajorVersion}"
